Add content into zucchini-cheddar-pancakes.html

--- a/recipes/zucchini-cheddar-pancakes.html
+++ b/recipes/zucchini-cheddar-pancakes.html
@@ -6,5 +6,28 @@
 </head>
 <body>
  <h1>Zucchini Cheddar Pancakes</h1>    
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F875190.jpg" alt="Zucchini Cheddar Pancakes">
+ <h2>Description</h2>
+  <p>
+    Six simple ingredients come together for a deliciously savory zucchini pancake, 
+    featuring Cheddar cheese and onions mixed into the batter.<br> 
+    You can jazz these up however you'd like; some reviewers suggest marinara sauce 
+    for dipping, while others added garlic.
+  </p>
+  <h2>Ingredients</h2>
+   <ul>
+     <li>2 cups grated zucchini</li>
+     <li>1 cup shredded Cheddar cheese</li>
+     <li>½ cup grated onion</li>
+     <li>2 eggs, beaten</li>
+     <li>1 cup biscuit baking mix (such as Bisquick®)</li>
+     <li>2 teaspoons vegetable oil, as needed</li>
+   </ul>
+  <h2>Steps</h2>
+   <ol>
+    <li>Mix zucchini, Cheddar cheese, and onion together in a bowl. Stir eggs and biscuit mix into zucchini mixture until well combined.</li>
+    <li>Heat vegetable oil on the griddle or large skillet over medium heat. Scoop about 1/4 cup batter onto heated griddle; cook until pancakes are browned, 3 to 4 minutes per side. Repeat with remaining batter.</li>
+   </ol> 
+
 </body>
 </html>
