Add link to baked-chicken-schnitzel.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
  <h1>Odin Recipes</h1>
- <a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a>
+ <a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a><br>
+ <a href="recipes/baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a><br>
+ 
 </body>
 </html>
