Add link to peanut-butter-cookies.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <h1>Odin Recipes</h1>
  <a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a><br>
  <a href="recipes/baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a><br>
+ <a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a>
  
 </body>
 </html>
