Create list out of recipe links

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
  <h1>Odin Recipes</h1>
- <a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a><br>
- <a href="recipes/baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a><br>
- <a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a>
- 
+ <ul>
+    <li><a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a></li>
+    <li><a href="recipes/baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a></li>
+    <li><a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
+ </ul> 
 </body>
 </html>
