Create stylesheet and add basic CSS to the pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Odin Recipes</h1>
+<div>
+ <h1 style="text-align:center;">Odin Recipes</h1>
  <ul>
     <li><a href="recipes/zucchini-cheddar-pancakes.html">Zucchini Cheddar Pancakes</a></li>
     <li><a href="recipes/baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a></li>
     <li><a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
  </ul> 
+</div>
 </body>
 </html>
