--- a/recipes/baked-chicken-schnitzel.html
+++ b/recipes/baked-chicken-schnitzel.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Baked Chicken Schnitzel</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
- <h1>Baked Chicken Schnitzel</h1>    
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3455742.jpg" alt="Baked Chicken Schnitzel">
- <h2>Description</h2>
-  <p>
+ <h1 class="fancy" >Baked Chicken Schnitzel</h1>    
+  <img class="center" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3455742.jpg" alt="Baked Chicken Schnitzel">
+<div style="background-color: white;">
+  <h2 class="desc fancy">Description</h2>
+  <p class="desc">
     Chicken schnitzel is a breeze to make in the oven. Plus, this method uses less oil and has easier cleanup.<br> 
     The breaded chicken breasts are baked until golden and crispy on the outside, yet they're still tender and juicy on the inside. Serve schnitzels with lemon wedges and a German-style potato salad.
   </p>
+</div>
   <h2>Ingredients</h2>
    <ul>
      <li>1 tablespoon olive oil, or as desired</li>
