--- a/recipes/peanut-butter-cookies.html
+++ b/recipes/peanut-butter-cookies.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Peanut Butter Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
- <h1>Peanut Butter Cookies</h1>    
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F01%2F18%2F1-275-classic-peanut-butter-cookies-mfs15-1.jpg" 
+ <h1 class="fancy">Peanut Butter Cookies</h1>    
+  <img class= "center" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F01%2F18%2F1-275-classic-peanut-butter-cookies-mfs15-1.jpg" 
        alt="Peanut Butter Cookies">
- <h2>Description</h2>
-  <p>
+<div style="background-color: white;">       
+ <h2 class="desc fancy">Description</h2>
+  <p class="desc">
     This crowd-pleasing recipe features crunchy peanut butter<br> 
     and is quick and easy tip for everyone looking for sweet snack!
   </p>
+</div>  
   <h2>Ingredients</h2>
    <ul>
      <li>1 cup unsalted butter</li>
