--- a/recipes/zucchini-cheddar-pancakes.html
+++ b/recipes/zucchini-cheddar-pancakes.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Zucchini Cheddar Pancakes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
- <h1>Zucchini Cheddar Pancakes</h1>    
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F875190.jpg" alt="Zucchini Cheddar Pancakes">
- <h2>Description</h2>
-  <p>
+ <h1 class="fancy">Zucchini Cheddar Pancakes</h1>    
+  <img class="center" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F875190.jpg" alt="Zucchini Cheddar Pancakes">
+ <div style="background-color: white;">
+  <h2 class="desc fancy">Description</h2>
+  <p class="desc">
     Six simple ingredients come together for a deliciously savory zucchini pancake, 
     featuring Cheddar cheese and onions mixed into the batter.<br> 
     You can jazz these up however you'd like; some reviewers suggest marinara sauce 
     for dipping, while others added garlic.
   </p>
+<div> 
   <h2>Ingredients</h2>
    <ul>
      <li>2 cups grated zucchini</li>
